force-app/main/default/objects/Enrollment__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <label>Unique Key</label>
    <type>Text</type>
    <length>36</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <description>Populated by trigger as CourseId_StudentId to enforce one enrollment per student per course.</description>
</CustomField>