force-app/main/default/objects/Enrollment__c/validationRules/Course_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Cannot_Change</fullName>
    <active>true</active>
    <description>Prevents Course__c from being changed after the Enrollment record is created.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Course__c))</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Course cannot be changed after enrollment is created.</errorMessage>
</ValidationRule>