force-app/main/default/objects/Enrollment__c/validationRules/Student_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Cannot_Change</fullName>
    <active>true</active>
    <description>Prevents Student__c from being changed after the Enrollment record is created.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Student__c))</errorConditionFormula>
    <errorDisplayField>Student__c</errorDisplayField>
    <errorMessage>Student cannot be changed after enrollment is created.</errorMessage>
</ValidationRule>