force-app/main/default/objects/Enrollment__c/validationRules/Student_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Required</fullName>
    <active>true</active>
    <description>Student is required on every Enrollment.</description>
    <errorConditionFormula>ISBLANK(Student__c)</errorConditionFormula>
    <errorMessage>Student is required.</errorMessage>
</ValidationRule>